--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "react-dom": "18.0.0"
   },
   "devDependencies": {
+    "@styled-jsx/plugin-sass": "^4.0.2",
     "eslint": "8.14.0",
-    "eslint-config-next": "12.1.5"
+    "eslint-config-next": "12.1.5",
+    "sass": "^1.51.0"
   }
 }
